Update M_javafx.java